--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <span id="element" style="color:rgb(227, 115, 36);"></span>
             <div class="buttons">
-                <button class="btn" style="--i:7;"><a href="https://app.enhancv.com/share/853397d6/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank">Download Resume</a></button>
+                <button class="btn" style="--i:7;"><a href="https://drive.google.com/file/d/1Nj01P4UUPIMvQVBiLFVCaTjsg3XVjdB-/view?usp=drivesdk" target="_blank">Download Resume</a></button>
                 <button class="btn" style="--i:8;"><a href="https://github.com/Anshi1008">Visit GitHub</a></button>
             </div>
         </div>
